--- a/templates/team.html
+++ b/templates/team.html
@@ -81,7 +81,7 @@ Fixed Navigation
 			<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
 				<!-- logo -->
 				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo" style="width: 56%;border-radius: 50%;" />
+					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo" style="width: 40%;border-radius: 50%;" />
 				</a>
 				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 				<!-- /logo -->
@@ -138,7 +138,7 @@ End Fixed Navigation
 
 				<div class="col-md-6">
 					<!-- <img src="images/about-us.jpg" alt=""> -->
-					<img src="{%static '/images/team/4.jpeg'%}" class="img-fluid"  alt="">
+					<img src="{%static '/images/team/nwteamm.jpg'%}" class="img-fluid"  alt="">
 
 				</div>
 				<div class="col-md-6">
