--- a/templates/consulting.html
+++ b/templates/consulting.html
@@ -200,9 +200,9 @@
 
         </div>
         <div class="content ">
-            <h5>IT Services Designed For</h5>
+            <h4>AI Solutions For</h4>
             <h1 style="font-size:7vh;" data-aos="zoom-out-down">Your Business</h1>
-            <h5 >Highly Tailored IT Design, Development & Security Services.</h5><br><br>
+            <!-- <h5 >Highly Tailored IT Design, Development & Security Services.</h5><br><br> -->
             <button id="videobtn" class="btn btn-primary" onclick="location.href='#consulation'">
                 FREE CONSULTATION
             </button>
@@ -226,7 +226,7 @@
             </div>
             <div class="col-md-6 my-auto p-3">
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
-                    <source src="{%static '/images/video3-2.mp4'%}" type="video/mp4">
+                    <source src="{%static '/images/vid3.mp4'%}" type="video/mp4">
                 </video>
             </div>
         </div>
