--- a/templates/team.html
+++ b/templates/team.html
@@ -141,8 +141,8 @@ End Fixed Navigation
 					<img src="{%static '/images/team/nwteamm.jpg'%}" class="img-fluid"  alt="">
 
 				</div>
-				<div class="col-md-6">
-					<p>It takes an incredible team to create something transformative. We have among us curious business
+				<div class="col-md-6 my-auto">
+					<p style="font-size: 18px;">It takes an incredible team to create something transformative. We have among us curious business
 						developers, smart engineers, <br> creative designers, energetic leaders and <br> a whole bunch of
 						aspirational individuals. <br> Our Team come from diverse educational and professional
 						backgrounds from prestigious institutes around the world to leading corporates and startups.
