--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
 	<link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}">
 	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
+	<link rel="stylesheet" href="{%static '/css/imagetext.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -52,6 +53,29 @@
 
 		gtag('config', 'G-LVV5M06YY7');
 	</script>
+	<style>
+		.video-container:after {
+            content: '';
+            z-index: 1;
+            height: 100vh;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            clip-path:polygon(0% 0%,100% 0%,100% 100%,0% 100%)
+        }
+		.video-container video {
+			min-width: 100%;
+			min-height: 100%;
+		  position: absolute;
+		
+			top: 50%;
+			left: 50%;
+			 transform: translate(-50%, -50%);
+			object-fit: cover;
+		}
+	</style>
 </head>
 
 <body id="body">
@@ -126,26 +150,23 @@ Fixed Navigation
 	<!--
 End Fixed Navigation
 ==================================== -->
+<section class="showcase">
+    <div class="video-container">
+        <video autoplay muted loop width="100%">
+            <source src="{% static '/images/frontbanner.mp4' %}" type="video/mp4">
+        </video>
+
+    </div>
+
+    <div class="content">
+      
+
+    </div>
+
+
+</section>
+
 	
-
-	<div class="hero-slide">
-		<div class="slider-item th-fullpage hero-area" >
-			<!-- The video -->
-	<video autoplay muted loop id="myVideo" style="position: absolute; width: 100vw;max-width: 100%;filter: brightness(50%)">
-		<source src="{%static '/images/SolvingScaleAI.mp4'%}" type="video/mp4">
-	</video>
-			<div class="container">
-				<div class="row">
-					<!-- <div class="col-md-12 text-center" style="margin-top: 25%;">
-						<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Solving Scale
-							AI</h1>
-						<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8"
-							class="btn btn-main bg-primary" href="company.html">Explore Us</a>
-					</div> -->
-				</div>
-			</div>
-		</div>
-
 		<footer id="footer" class="bg-one">
 
 
