--- a/templates/company.html
+++ b/templates/company.html
@@ -93,7 +93,7 @@ Fixed Navigation
 
 				<div class="collapse navbar-collapse" id="navigation">
 					<ul class="navbar-nav ml-auto text-center camsecdemo">
-						<a href="index.html"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
+						<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
 							src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="logo" /></a>
 					<li class="nav-item ">
 							<a class="nav-link" href="{%url 'company'%}">Company</a>
