--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,11 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Solving Scale AI | AI & Computer Vision expertise | Video Analytics Solutions">
+	<meta name="title" content="Solving Scale AI | Solving Problems with AI | Video Analytics Solutions">
 	<meta name="description"
-		content="A Computer vision, company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.
-
-	Meta Keywords:
-	ai solutions,computer vision solutions,best company of computer vision in indore,CV in indore, ERP, computer vision syndrome,computer vision company,computer vision projects,solutions in computer vision,computer vision company in indore,video analytics,computer vision company in Madhya Pradesh">
-
+		content="A Computer vision, company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
+	<meta name="Keywords"
+		content="AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence Company, AI Company in Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High end AI Company, Enterprise AI, AI and Machine Learning Company, 24/7 AI Company, Clear View Facial Recognition  ">
 	<meta name="author" content="SolvingScaleAI">
 
 	<title>Solving Scale AI</title>
@@ -48,33 +46,42 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
 		gtag('js', new Date());
 
 		gtag('config', 'G-LVV5M06YY7');
 	</script>
 	<style>
 		.video-container:after {
-            content: '';
-            z-index: 1;
-            height: 100vh;
-            width: 100%;
-            top: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.5);
-            position: absolute;
-            clip-path:polygon(0% 0%,100% 0%,100% 100%,0% 100%)
-        }
+			content: '';
+			z-index: 1;
+			height: 100vh;
+			width: 100%;
+			top: 0;
+			left: 0;
+			background: rgba(0, 0, 0, 0.5);
+			position: absolute;
+			clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%)
+		}
+
 		.video-container video {
 			min-width: 100%;
 			min-height: 100%;
-		  position: absolute;
-		
+			position: absolute;
+
 			top: 50%;
 			left: 50%;
-			 transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
 			object-fit: cover;
 		}
+
+		.hide {
+			display: none;
+		}
+		
 	</style>
 </head>
 
@@ -124,7 +131,7 @@ Fixed Navigation
 					<ul class="navbar-nav ml-auto text-center camsecdemo">
 
 						<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
-								src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="logo" /></a>
+								src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="solvingscale.ai" /></a>
 						<li class="nav-item ">
 							<a class="nav-link" href="{%url 'company'%}">Company</a>
 						</li>
@@ -147,114 +154,137 @@ Fixed Navigation
 			<!-- /main nav -->
 		</div>
 	</header>
+	<h1 class="hide"> <strong>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
+			Company, AI Company in
+			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
+			end AI
+			Company</strong> </h1>
+	<h2 class="hide"> <b>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
+			Company, AI Company in
+			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
+			end AI
+			Company</b> </h2>
+
 	<!--
 End Fixed Navigation
 ==================================== -->
-<section class="showcase">
-    <div class="video-container">
-        <video autoplay muted loop width="100%">
-            <source src="{% static '/images/frontbanner.mp4' %}" type="video/mp4">
-        </video>
+	<section class="showcase">
+		<div class="video-container">
+			<video autoplay muted loop width="100%">
+				<source src="{% static '/images/frontbanner.mp4' %}" type="video/mp4">
+				solvingscale.ai Introduction Video
+			</video>
+			<div class="content">
 
-    </div>
+			</div>
+		</div>
 
-    <div class="content">
-      
+		<div class="content">
 
-    </div>
+<h1 class="hidde"> <strong>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
+			Company, AI Company in
+			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
+			end AI
+			Company</strong> </h1>
+	<h2 class="hidde"> <b>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
+			Company, AI Company in
+			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
+			end AI
+			Company</b> </h2>
+		</div>
 
 
-</section>
-
-	
-		<footer id="footer" class="bg-one">
+	</section>
 
 
-			<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
-				<a class="navbar-brand" href="#">
+	<footer id="footer" class="bg-one">
 
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="logo" width="150"
-						height="30" class="d-inline-block align-top" alt="" loading="lazy" />
-				</a>
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-					<!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
-					<ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="{%url 'company'%}">Company </a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="{%url 'consulting'%}">Consulting </a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="{%url 'team'%}">Team </a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="{%url 'portfolio'%}">Career </a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="{%url 'contact'%}">Contact </a>
-						</li>
-						<!-- <li class="nav-item active">
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
+			<a class="navbar-brand" href="#">
+
+				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="logo"
+					width="150" height="30" class="d-inline-block align-top" alt="" loading="lazy" />
+			</a>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+				<!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="{%url 'company'%}">Company </a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{%url 'consulting'%}">Consulting </a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{%url 'team'%}">Team </a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{%url 'portfolio'%}">Career </a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{%url 'contact'%}">Contact </a>
+					</li>
+					<!-- <li class="nav-item active">
 				<a class="nav-link" href="#">SignIn </a>
 			  </li> -->
-					</ul>
-					<ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-						<li class="nav-item ">
-							<a class="nav-link" href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i
-									class="fa fa-facebook-f"></i></a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="https://www.linkedin.com/company/solvingscale-ai/"><i
-									class="fa fa-linkedin"></i></a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="https://twitter.com/AiScale"><i class="	fa fa-twitter"></i></a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="https://www.instagram.com/solvingscale.ai/"><i
-									class="	fa fa-instagram"></i></a>
-						</li>
+				</ul>
+				<ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
+					<li class="nav-item ">
+						<a class="nav-link" href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i
+								class="fa fa-facebook-f"></i></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="https://www.linkedin.com/company/solvingscale-ai/"><i
+								class="fa fa-linkedin"></i></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="https://twitter.com/AiScale"><i class="	fa fa-twitter"></i></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="https://www.instagram.com/solvingscale.ai/"><i
+								class="	fa fa-instagram"></i></a>
+					</li>
 
-					</ul>
-				</div>
-			</nav>
-		</footer>
+				</ul>
+			</div>
+		</nav>
+	</footer>
 
 
-		<!-- end Footer Area
+	<!-- end Footer Area
 		========================================== -->
 
 
 
-		<!-- 
+	<!-- 
 		Essential Scripts
 		=====================================-->
-		<!-- Main jQuery -->
-		<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-		<!-- Google Map -->
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-		<script src="{%static '/plugins/google-map/gmap.js'%}"></script>
+	<!-- Main jQuery -->
+	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
+	<!-- Google Map -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+	<script src="{%static '/plugins/google-map/gmap.js'%}"></script>
 
-		<!-- Form Validation -->
-		<script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script>
-		<script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script>
+	<!-- Form Validation -->
+	<script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script>
+	<script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script>
 
-		<!-- Bootstrap4 -->
-		<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-		<!-- Parallax -->
-		<script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script>
-		<!-- lightbox -->
-		<script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script>
-		<!-- Owl Carousel -->
-		<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
-		<!-- filter -->
-		<script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script>
-		<!-- Smooth Scroll js -->
-		<script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script>
+	<!-- Bootstrap4 -->
+	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
+	<!-- Parallax -->
+	<script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script>
+	<!-- lightbox -->
+	<script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script>
+	<!-- Owl Carousel -->
+	<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
+	<!-- filter -->
+	<script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script>
+	<!-- Smooth Scroll js -->
+	<script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script>
 
-		<!-- Custom js -->
-		<script src="{%static '/js/script.js'%}"></script>
-		<script src="{%static '/js/val.js'%}"></script>
+	<!-- Custom js -->
+	<script src="{%static '/js/script.js'%}"></script>
+	<script src="{%static '/js/val.js'%}"></script>
 
 
 </body>
