--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@ End Fixed Navigation
 ==================================== -->
 	<section class="showcase">
 		<div class="video-container">
-			<video autoplay muted loop width="100%">
+			<video autoplay loop width="100%">
 				<source src="{% static '/images/frontbanner.mp4' %}" type="video/mp4">
 				solvingscale.ai Introduction Video
 			</video>
