--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Solving Scale AI | Solving Problems with AI | Video Analytics Solutions">
+	<meta name="title" content="Solving Scale AI | Solving Problems with AI | AI Consulting Company">
 	<meta name="description"
-		content="A Computer vision, company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
+		content="Solving Scale AI, a computer vision company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
 	<meta name="Keywords"
 		content="AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence Company, AI Company in Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High end AI Company, Enterprise AI, AI and Machine Learning Company, 24/7 AI Company, Clear View Facial Recognition  ">
 	<meta name="author" content="SolvingScaleAI">
 
-	<title>Solving Scale AI</title>
+	<title>solvingscale.ai</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -77,11 +77,6 @@
 			transform: translate(-50%, -50%);
 			object-fit: cover;
 		}
-
-		.hide {
-			display: none;
-		}
-		
 	</style>
 </head>
 
@@ -117,7 +112,7 @@ Fixed Navigation
 				<!-- logo -->
 				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo"
-						style="width: 56%;border-radius: 50%;" />
+						style="width: 56%;border-radius: 50%;" title="solvingscale.ai"/>
 				</a>
 				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 				<!-- /logo -->
@@ -154,16 +149,7 @@ Fixed Navigation
 			<!-- /main nav -->
 		</div>
 	</header>
-	<h1 class="hide"> <strong>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
-			Company, AI Company in
-			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
-			end AI
-			Company</strong> </h1>
-	<h2 class="hide"> <b>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
-			Company, AI Company in
-			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
-			end AI
-			Company</b> </h2>
+
 
 	<!--
 End Fixed Navigation
@@ -172,7 +158,8 @@ End Fixed Navigation
 		<div class="video-container">
 			<video autoplay loop width="100%">
 				<source src="{%static '/images/frontbanner.webm'%}" type="video/webm">
-				<source src="https://github.com/dhavalmaniyar/solvingscale2/blob/main/static/images/frontbanner.mp4"  type="video/mp4">
+				<source src="https://github.com/dhavalmaniyar/solvingscale2/blob/main/static/images/frontbanner.mp4"
+					type="video/mp4">
 				<source src="{% static '/images/frontbanner.mp4' %}" type="video/mp4">
 				solvingscale.ai Introduction Video
 			</video>
@@ -183,16 +170,16 @@ End Fixed Navigation
 
 		<div class="content">
 
-<h1 class="hidde"> <strong>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
-			Company, AI Company in
-			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
-			end AI
-			Company</strong> </h1>
-	<h2 class="hidde"> <b>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence
-			Company, AI Company in
-			Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High
-			end AI
-			Company</b> </h2>
+			<h1 class="hidde"> <strong>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial
+					Intelligence
+					Company, AI Company in
+					Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting,
+					High
+					end AI
+					Company</strong> </h1>
+			<h2 class="hidde"> <b>AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial
+					Intelligence
+					Company, AI Company in Consulting</b> </h2>
 		</div>
 
 
