--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -80,7 +80,7 @@ Fixed Navigation
 			<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
 				<!-- logo -->
 				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo" style="width: 40%;border-radius: 50%;" />
+					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 				</a>
 				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 				<!-- /logo -->
@@ -93,7 +93,7 @@ Fixed Navigation
 				<div class="collapse navbar-collapse" id="navigation">
 					<ul class="navbar-nav ml-auto text-center camsecdemo">
 						<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
-							src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="logo" /></a>
+							src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="solvingscale.ai" /></a>
 					<li class="nav-item ">
 							<a class="nav-link" href="{%url 'company'%}">Company</a>
 						</li>
@@ -211,8 +211,8 @@ End Fixed Navigation
 	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
 		<a class="navbar-brand" href="#">
 			
-			<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="logo" width="150"
-				height="30" class="d-inline-block align-top" alt="" loading="lazy" />
+			<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="solvingscale.ai" width="150"
+				height="30" class="d-inline-block align-top" loading="lazy" />
 		</a>
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 			<!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
