--- a/templates/team.html
+++ b/templates/team.html
@@ -81,7 +81,7 @@ Fixed Navigation
 			<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
 				<!-- logo -->
 				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo" style="width: 40%;border-radius: 50%;" />
+					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 				</a>
 				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 				<!-- /logo -->
@@ -138,7 +138,7 @@ End Fixed Navigation
 
 				<div class="col-md-6">
 					<!-- <img src="images/about-us.jpg" alt=""> -->
-					<img src="{%static '/images/team/nwteamm.jpg'%}" class="img-fluid"  alt="">
+					<img src="{%static '/images/team/nwteamm.jpg'%}" class="img-fluid"  alt="solvingscal.ai team">
 
 				</div>
 				<div class="col-md-6 my-auto">
@@ -166,10 +166,10 @@ End Fixed Navigation
 			<div class="row">
 				<div class="col-md-12">
 					<div class="company-gallery">
-						<img src="{%static '/images/team/1.jpeg'%}" alt="">
-						<img src="{%static '/images/team/2.jpeg'%}" alt="">
-						<img src="{%static '/images/team/3.jpeg'%}" alt="">
-						<img src="{%static '/images/team/5.jpeg'%}" alt="">
+						<img src="{%static '/images/team/1.jpeg'%}" alt="solvingscale.ai group 1">
+						<img src="{%static '/images/team/2.jpeg'%}" alt="solvingscale.ai group 2">
+						<img src="{%static '/images/team/3.jpeg'%}" alt="solvingscale.ai group 3">
+						<img src="{%static '/images/team/5.jpeg'%}" alt="solvingscale.ai group 4">
 						
 					</div>
 				</div>
@@ -184,7 +184,7 @@ End Fixed Navigation
 			<a class="navbar-brand" href="#">
 				
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="logo" width="150"
-					height="30" class="d-inline-block align-top" alt="" loading="lazy" />
+					height="30" class="d-inline-block align-top" loading="lazy" />
 			</a>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 				<!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
