--- a/templates/index.html
+++ b/templates/index.html
@@ -251,25 +251,25 @@ End Fixed Navigation
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-	<script src="{%static '/plugins/google-map/gmap.js'%}"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
+	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
 
 	<!-- Form Validation -->
-	<script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script>
-	<script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
+	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
 	<!-- Bootstrap4 -->
-	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script> -->
 	<!-- Parallax -->
-	<script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script>
+	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
 	<!-- lightbox -->
-	<script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
 	<!-- Owl Carousel -->
-	<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
 	<!-- filter -->
-	<script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
 	<!-- Smooth Scroll js -->
-	<script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script>
+	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
 
 	<!-- Custom js -->
 	<script src="{%static '/js/script.js'%}"></script>
