--- a/templates/index.html
+++ b/templates/index.html
@@ -259,7 +259,7 @@ End Fixed Navigation
 	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
 	<!-- Bootstrap4 -->
-	<!-- <script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script> -->
+	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
 	<!-- Parallax -->
 	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
 	<!-- lightbox -->
