--- a/templates/contact.html
+++ b/templates/contact.html
@@ -262,7 +262,7 @@ Essential Scripts
 <!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
 <!-- Bootstrap4 -->
-<!-- <script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script> -->
+<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
 <!-- Parallax -->
 <!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
 <!-- lightbox -->
