consulting page updated

--- a/templates/company.html
+++ b/templates/company.html
@@ -39,8 +39,10 @@
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -48,6 +50,19 @@
 
   gtag('config', 'G-LVV5M06YY7');
 </script>
+<style>
+	.navbar {
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        right: 0;
+        padding: 0px;
+
+    }
+    .navbar-brand{
+        padding: 0px 10px;
+    }
+</style>
 </head>
 
 <body id="body">
