--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -47,6 +47,19 @@
 
   gtag('config', 'G-LVV5M06YY7');
 </script>
+<style>
+	.navbar {
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        right: 0;
+        padding: 0px;
+
+    }
+    .navbar-brand{
+        padding: 0px 10px;
+    }
+</style>
 </head>
 
 <body id="body">
