automobile and customized image added

--- a/templates/consulting.html
+++ b/templates/consulting.html
@@ -252,6 +252,7 @@
                     hospitals, its hard to take care of the patient and staff of the hospitals. We provide a
                     solution to
                     overcome this problem.</p>
+                <button class="btn btn-outline-light">Know More</button>
             </div>
             <div class="col-md-6 my-auto p-3">
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
@@ -278,6 +279,7 @@
                     factors that contribute to construction site injuries and fatalities. The leading causes of
                     worker deaths on construction sites are Falls, Getting struck by an object, Electrocution,
                     Pipefitter Accidents, Equipment failure, etc.</p>
+                <button class="btn btn-outline-light">Know More</button>
             </div>
         </div>
         <div class="row my-5 text-center text-white grow "
@@ -290,6 +292,7 @@
                     include the product quality, but also user experience. We always look to provide that
                     satisfaction. In today's era, user experience is the most important thing matters. We provide an
                     AI solution to overcome security and retail factors .</p>
+                <button class="btn btn-outline-light">Know More</button>
             </div>
             <div class="col-md-6 my-auto p-3">
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
@@ -301,22 +304,39 @@
         <div class="row my-5 text-center text-white grow "
             style="background: linear-gradient(to right, #3366ff 0%, #ff99cc 100%); border-radius: 10px;">
             <div class="col-md-6 my-auto p-3">
-                <i class="fa fa-car fa-4x" data-aos="fade-down" aria-hidden="true"></i><br> <br>
-                <h4 data-aos="zoom-in" data-aos-duration="1000">AUTOMOBILE </h4>
-                <p class="text-white" data-aos="flip-up" data-aos-duration="1000">Nowadays, more and more professions
-                    require long-term concentration. Drivers
-                    must keep a close eye on the road, so they can react to sudden events immediately. Driver
-                    fatigue often becomes a direct cause of many traffic accidents.</p>
+                <img src="{%static '/images/customized.gif'%}" style="width:100%; border-radius: 10px;"
+                    alt="solvingscale.ai customized services">
             </div>
             <div class="col-md-6 my-auto p-3">
 
-                <i class="fa fa-user fa-4x" data-aos="fade-down" aria-hidden="true"></i><br> <br>
-                <h4 data-aos="zoom-in" data-aos-duration="1000">CUSTOMERISED SERVICES </h4>
-                <p class="text-white" data-aos="flip-up" data-aos-duration="1000">Customer satisfaction has always been
-                    the priority!. Satisfaction not only
-                    include the product quality, but also user experience. TDBians always look to provide that
-                    satisfaction. In today's era, user experience is the most important thing matters. We provide an
-                    AI solution to overcome security and retail factors</p>
+                <i class="fa fa-building fa-4x" data-aos="fade-down" aria-hidden="true"></i><br> <br>
+                <h4 data-aos="zoom-in" data-aos-duration="1000">Smart City </h4>
+                <p class="text-white" data-aos="flip-left" data-aos-duration="1000">Innovate a better future...Smarter
+                    India! TDBians always support things to be smart. By 2050, 70% of global population will live in
+                    smart cities. TDB provides a solution to make a city smarter, and secure. Our AI solution consist of
+                    Traffic management system, Automatic number plate Recognition, Loitering detection, missing and
+                    threattening object detection, Car name and brand recognition, Crowd counting, Face recogntion,
+                    Quarrel detection, Fire and smoke detection, Intrusion detection, camera tampering, Fall Detection,
+                    etc.</p>
+                <button class="btn btn-outline-light">Know More</button>
+            </div>
+        </div>
+        <div class="row my-5 text-center text-white grow "
+            style="background: linear-gradient(to right, #3366ff 0%, #ff99cc 100%); border-radius: 10px;">
+            <div class="col-md-6 my-auto p-3">
+                    <i class="fa fa-car fa-4x" data-aos="fade-down" aria-hidden="true"></i><br> <br>
+                    <h4 data-aos="zoom-in" data-aos-duration="1000">AUTOMOBILE </h4>
+                    <p class="text-white" data-aos="flip-up" data-aos-duration="1000">Nowadays, more and more professions
+                        require long-term concentration. Drivers
+                        must keep a close eye on the road, so they can react to sudden events immediately. Driver
+                        fatigue often becomes a direct cause of many traffic accidents.</p>
+                        <button class="btn btn-outline-light">Know More</button>
+                </div>
+                <div class="col-md-6 my-auto p-3">
+                <img src="{%static '/images/automobile.jpeg'%}" style="width:100%; border-radius: 10px;"
+                    alt="solvingscale.ai automobile services">
+
+                
             </div>
         </div>
 
